Corrected vertical-align property

--- a/layout/_patterns.scss
+++ b/layout/_patterns.scss
@@ -28,7 +28,7 @@
 
   & > * {
     display: table-cell;
-    text-align: middle;
+    vertical-align: middle;
   }
 }
 
